--- a/Mario_Game/Mario_Game.vcxproj.filters
+++ b/Mario_Game/Mario_Game.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Stone.cpp">
       <Filter>Source Files\Map Components</Filter>
     </ClCompile>
+    <ClCompile Include="Enemies.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="Stone.h">
       <Filter>Header Files\Map Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemies.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
